[tool.poetry]
name = "synapse-purge"
version = "1.4.1"
description = "A script to purge content from Synapse servers"
authors = ["Chris Braun <cryzed@googlemail.com>", "Michael Serajnik <ms@mserajnik.at>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.4.0"
postgres = "^3.0.0"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
